# AMediaCodecRecord

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Arguments.h  JNI_NativeRecord.cpp  Log.h  NativeRecord.cpp  NativeRecord.h  ThreadQueue.cpp
app/src/main/java/com/quinn/amediacodecrecord/: MainActivity.java  NativeRecord.java  Util.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
